--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
-  font-family: Arial, sans-serif;
+  font-family: Courier New, fantasy;
   background: linear-gradient(135deg, #66cc00, #2575fc);
-  color: #fff;
+  color: #C0C0FF;
   text-align: center;
   height: 100vh;
   margin: 0;
@@ -11,7 +11,7 @@ body {
 }
 
 .container {
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(0, 0, 0, 0.7);
   padding: 30px;
   border-radius: 15px;
   width: 80%;
@@ -30,16 +30,6 @@ h1 {
   min-height: 60px;
 }
 
-button {
-  background: #ff9800;
-  border: none;
-  padding: 12px 20px;
-  font-size: 16px;
-  border-radius: 10px;
-  cursor: pointer;
-  transition: 0.3s;
-}
 
-button:hover {
-  background: #e68900;
-}
+
+
